--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
+    "@expo/ngrok": "^4.1.1",
+    "expo": "^48.0.16",
+    "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
+    "fs": "^0.0.1-security",
+    "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-fs": "^2.20.0",
+    "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.76.4"
   },
   "private": true
 }
