--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "isp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.1",
     "base-64": "^1.0.0",
-    "expo": "^48.0.16",
+    "expo": "~48.0.15",
     "expo-asset": "~8.9.1",
     "expo-av": "^13.2.1",
     "expo-file-system": "~15.2.2",
+    "expo-speech": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "fs": "^0.0.1-security",
     "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-fs": "^2.20.0",
-    "react-native-url-polyfill": "^1.3.0"
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-whisper": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
