--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@google-cloud/text-to-speech": "^4.2.2",
     "expo": "~48.0.15",
+    "expo-av": "~13.2.1",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-config": "^1.5.1",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-fs": "^2.20.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-tts": "^4.1.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
