--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~48.0.15",
     "expo-asset": "~8.9.1",
     "expo-av": "^13.2.1",
+    "expo-blur": "^12.3.0",
     "expo-file-system": "~15.2.2",
     "expo-speech": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
@@ -23,6 +24,7 @@
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-fs": "^2.20.0",
+    "react-native-modal": "^13.0.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-whisper": "^0.0.1"
   },
