--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 KEY_IOS = AIzaSyCqgXJh2j6XmlV_m_oDyVLid_amxUGOog8
 KEY_ANDROID = AIzaSyDVNe62hTmMCf_Kr-ygkEIbG-4cTm6XSnk
+OPENAI_API_KEY = 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
