--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["module:metro-react-native-babel-preset"],
-  "plugins": ["module:react-native-dotenv"]
+  "plugins": [["module:react-native-dotenv"]]
 }
