--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "base-64": "^1.0.0",
     "expo": "~48.0.15",
     "expo-asset": "~8.9.1",
     "expo-av": "^13.2.1",
-    "expo-blur": "^12.3.0",
+    "expo-blur": "~12.2.2",
     "expo-file-system": "~15.2.2",
+    "expo-font": "^11.1.1",
     "expo-speech": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -26,7 +29,8 @@
     "react-native-fs": "^2.20.0",
     "react-native-modal": "^13.0.1",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-whisper": "^0.0.1"
+    "react-native-whisper": "^0.0.1",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
