--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@deepgram/sdk": "^2.0.0",
     "@expo/ngrok": "^4.1.1",
     "base-64": "^1.0.0",
     "expo": "~48.0.15",
     "expo-asset": "~8.9.1",
     "expo-av": "^13.2.1",
-    "expo-blur": "^12.3.0",
     "expo-file-system": "~15.2.2",
     "expo-speech": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
