--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-fs": "^2.20.0",
     "react-native-modal": "^13.0.1",
+    "react-native-navigation": "^7.33.2",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-whisper": "^0.0.1",
     "react-navigation": "^4.4.4"
