ui for main page standardized across ios & android

--- a/prompts/appText.json
+++ b/prompts/appText.json
@@ -1,7 +1,7 @@
 {
     "english": {
         "appTitle": "Convo",
-        "correctionsTitle": "List of errors",
+        "correctionsTitle": "Message Correction",
         "settingsTitle": "Settings",
         "settingsClose": "Done",
         "touchToReveal": "Touch to reveal",
