--- a/prompts/appText.json
+++ b/prompts/appText.json
@@ -8,7 +8,7 @@
         "userTitle": "You",
         "spanishText": "Español",
         "frenchText": "Français",
-        "mandarinText": "汉语 (Mandarin)",
+        "mandarinText": "汉语",
         "koreanText": "한국어",
         "russianText": "русский язык",
         "englishText": "English",
