--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@deepgram/sdk": "^2.0.0",
     "@expo/ngrok": "^4.1.1",
+    "@react-native-firebase/app": "^18.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "base-64": "^1.0.0",
@@ -21,12 +22,14 @@
     "expo-speech": "~11.1.1",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.2",
     "fs": "^0.0.1-security",
     "openai": "^3.2.1",
     "re": "^0.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
+    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.20.0",
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.33.2",
