Added in Bottom Tab Bar

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@deepgram/sdk": "^2.0.0",
     "@expo/ngrok": "^4.1.1",
     "@react-native-firebase/app": "^18.0.0",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native-stack": "^6.9.12",
     "base-64": "^1.0.0",
     "expo": "~48.0.15",
@@ -19,6 +19,7 @@
     "expo-av": "^13.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "^11.1.1",
+    "expo-navigation-bar": "^2.1.1",
     "expo-speech": "~11.1.1",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
