--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
+    "react-native-elements": "^3.4.3",
     "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.20.0",
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.33.2",
     "react-native-url-polyfill": "^1.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-whisper": "^0.0.1",
     "react-navigation": "^4.4.4"
   },
